load("@rules_cc//cc:defs.bzl", "cc_library")


cc_import (
    name = "sub",
    hdrs = ["include/lib/sub.hpp",],
    shared_library = "lib/libsub.so",
)

cc_library(
    name = "psiRun",
    srcs = ["psiRun.cpp"],
    hdrs = ["include/psi/psiRun.hpp",
            "include/lib/sub.hpp"],
    strip_include_prefix = "include",
    deps = [":sub"],
    visibility = ["//visibility:public"],

)

