# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")


pybind_extension(
    name = "mypsi",
    srcs = ["mypsi.cpp"],
    #visibility = ["//visibility:public"],
    deps = [
        "//native_lib:psiRun",
    ],
)

py_test(
    name = "psi_test",
    size = "small",
    srcs = ["psi_test.py"],
    python_version = "PY3",
    data = select({
      "@platforms//os:windows": [":mypsi.pyd"],
      "//conditions:default": [":mypsi.so"],
    }),
    tags = ["unit"],
)